feat: allow adding raw photos
